--- a/src/scss/baseline.miscellaneous.scss
+++ b/src/scss/baseline.miscellaneous.scss
@@ -8,18 +8,20 @@ blockquote {
 
     font-style: italic;
     color: #666;
-    padding: 0 0 10px 10px;
+    padding: 0 0 10px 60px;
     margin: 0 0 0 10px;
     border-left: 3px solid #999;        
     margin-bottom: 20px;
+    position: relative;
 
     &:before {
         content: "\201C";
         position:absolute;
-        top:-10px;
+        top:0px;
         left:0px;
-        font-size:80px;
-        font-family: Times New Roman, Serif;
+        font-size: 80px;
+        font-family: "Times New Roman", Serif;
+        line-height: 50px;
     }
 
     .#{$baseline-selector-prefix}-blockquote-author {
